--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "dotenv": "^16.3.1",
     "swagger-ui-express": "^5.0.0",
     "swagger-autogen": "^2.23.6",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
+
